--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -1,3 +1,14 @@
+:root {
+  --color-white: #FFFFFF;
+  --color-dark: #1F1F1F;
+  --color-green: #00FF47;
+  --color-dark-green: #27AE60;
+  --color-light-green: linear-gradient(40deg, #00FF47 0%, #27AE60 100%);
+  --color-darker-green: linear-gradient(40deg, #27AE60 0%, #00FF47 100%);
+  --color-gray: #595959;
+
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -5,11 +16,11 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: #f0f0f0;
+  background-color: var(--color-dark);
 }
 
 .title {
-  color: green;
+  color: var(--color-green);
   font-size: 2.5rem;
   margin-bottom: 10px;
 }
@@ -25,6 +36,7 @@
   flex-direction: column;
   gap: 10px;
   width: 300px;
+  align-items: center;
 }
 
 .input {
@@ -34,12 +46,19 @@
   font-size: 1rem;
 }
 
+.notes{
+  font-size: 0.8rem;
+  color: var(--color-gray);
+  margin-bottom: 10px;
+}
+
 .button {
-  padding: 10px 20px;
-  background-color: blue;
-  color: white;
-  border: none;
-  border-radius: 4px;
+
+}
+
+.continueLink{
+  color: var(--color-white);
+  text-decoration: none;
   cursor: pointer;
-  font-size: 1rem;
+
 }
