--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -20,13 +20,14 @@
 }
 
 .title {
-  color: var(--color-green);
-  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--color-dark-green);
+  font-size: 4.5rem;
   margin-bottom: 10px;
 }
 
 .subtitle {
-  color: black;
+  font-weight: 500;
   font-size: 1.5rem;
   margin-bottom: 20px;
 }
@@ -50,10 +51,6 @@
   font-size: 0.8rem;
   color: var(--color-gray);
   margin-bottom: 10px;
-}
-
-.button {
-
 }
 
 .continueLink{
